# fastMRI

./: .flake8  .gitignore  CONTRIBUTING.md  GIT_TEST.md  LIST_OF_PAPERS.md  README.md  dev-requirements.txt  fastMRI_tutorial.ipynb  fastmri_dirs.yaml  mypy.ini  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  test-torch-gpu.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  Feature_request.md  config.yml
.github/old_discussion_posts/: 2020_challenge_launch.md  fastmri_test_set.md
.github/workflows/: build-and-test.yml  build.yml  publish-package.yml
RAKI/: RAKI_model.py  RAKI_trainer.py  Utilities.py
banding_removal/: .gitignore  README.md  requirements.txt
banding_removal/fastmri/: args.py  base_trainer.py  checkpointing_mixin.py  distributed_mixin.py  learning_rate_mixin.py  logging_mixin.py  parameter_group_mixin.py  run.py  spawn_dist.py  ssim_loss_mixin.py  trainer.py  training_loop_mixin.py  transform_mixin.py  visualization_mixin.py
banding_removal/scripts/: pretrain.py  pretrain_dev.py  train.py  train_dev.py
common/: __init__.py  args.py  evaluate.py  subsample.py  test_subsample.py  utils.py
data/: README.md  __init__.py  mri_data.py  test_transforms.py  transforms.py  volume_sampler.py
experimental/brain_challenge_inference/: README.md  run_brain_challenge_inference.py  run_brain_challenge_transfer_inference.py
experimental/cs/: README.md  run_bart.py
experimental/demos/: train_unet.py
experimental/unet/: README.md  train_unet_demo.py  unet_module.py  (+2 more)
fastmri/: __init__.py  _version.py  coil_combine.py  evaluate.py  fftc.py  losses.py  math.py  mri_module.py  training_module.py  utils.py
fastmri_examples/: README.md
fastmri_raw_data_manifest/: brain_multicoil_test_full_batch_0.txt  brain_multicoil_train_batch_0.txt  brain_multicoil_train_batch_8.txt  knee_multicoil_train_batch_0.txt  knee_multicoil_train_batch_2.txt  knee_multicoil_train_batch_3.txt
mod_fastmri/: mod_train_unet.py  mod_unet_module.py  transforms.py
models/: __init__.py  mri_model.py
raki_model/: meta.experiment  meta_tags.csv  metrics.csv
tests/: conftest.py  create_temp_data.py  fastmri_dirs.yaml  test_data.py  test_integrations.py  test_math.py  test_models.py  test_modules.py  test_transforms.py
(+146 files in other folders)
