[flake8]
max-line-length=88
per-file-ignores=__init__.py:F401
extend-exclude = *brain_challenge*,*2020-08*
extend-ignore = E203, E266, E501

[isort]
profile = black

[metadata]
author = Meta/NYU fastMRI Team
author_email = fastmri@fb.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Physics
description = A large-scale dataset of both raw MRI measurements and clinical MRI images.
license = MIT
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
name = fastmri
project_urls =
    Homepage = https://fastmri.org/
    Source = https://github.com/facebookresearch/fastMRI

[mypy]

[mypy-h5py.*]
ignore_missing_imports = True

[mypy-runstats.*]
ignore_missing_imports = True

[mypy-skimage.metrics.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[options]
install_requires =
    numpy>=1.18.5
    scikit_image>=0.16.2
    torchvision>=0.8.1
    torch>=1.8
    runstats>=1.8
    pytorch-lightning>=1.4
    h5py>=2.10
    PyYAML>=5.3.1
    torchmetrics>=0.5.1
    pandas>=1.3.4
packages = find:
python_requires = >=3.8

[options.extras_require]
dev =
    black==22.3.0
    flake8==4.0.1
    mypy==1.1.1
    pytest==7.1.2
    types-pyyaml==5.4.10
    types-requests==2.27.6
    types-urllib3==1.26.6
tests =
    black==22.3.0
    flake8==4.0.1
    h5py==3.7.0
    isort==5.10.1
    mypy==1.1.1
    numpy==1.23.5
    pandas==1.4.2
    pandas-stubs==1.2.0.61
    pytest==7.1.2
    pytorch-lightning==1.6.4
    PyYAML==6.0
    runstats==2.0.0
    scikit_image==0.19.3
    torchmetrics==0.9.1
    torchvision==0.12.0
    torch==1.11.0
    types-pyyaml==5.4.10
    types-requests==2.27.6
    types-urllib3==1.26.6

[options.packages.find]
exclude = 
    banding_removal*
    fastmri_examples*
    tests*